# numeric-rule-finder

./: .gitignore  BUSINESS_GUIDE.md  CHANGELOG.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
ebook/: index.md
ebook/chapters/: 00_introduction.md  01_how_it_works.md  02_example_ba_close.md  03_example_points_integrity.md  04_example_meridian.md  05_where_it_fits.md  06_vs_ml.md  07_xml_showcase.md  08_substrate.md  A_appendix_mathematics.md
examples/cli_groups/: README.md  ledger.csv  test_cli_groups.py
examples/cohomology/: README.md  cohomology_demo.py
examples/depth/: README.md  depth_demo.py
examples/discovery/: README.md  demo.py
examples/fraud_vs_ml/: README.md  compare.py  test_compare.py
examples/gamut/: README.md  gamut_demo.py  test_gamut.py
examples/gamut/data/: ballots.csv  clinical_trial.csv  energy_grid.csv  etl_rows.csv  stock_pairs.csv  supply_chain.csv  warehouse_a.csv  warehouse_b.csv
examples/grouping_vs_ml/: README.md  find_groups.py  test_grouping.py
examples/meridian/: README.md  investigate.py  test_workflow.py
examples/meridian/data/: ledger.csv
examples/ml_assist/: README.md  pipeline.py  test_pipeline.py
examples/northwind_close/: README.md  close_the_books.py  test_close.py
examples/northwind_close/data/: gl.csv  stock.csv
examples/points_integrity/: README.md  detect.py  test_detect.py
examples/points_integrity/data/: clean_log.csv  monitor_batch.csv  tier_bonuses.csv
examples/quickstart/: README.md  sample_ledger.csv  sample_ledger_broken.csv
examples/scale/: README.md  scale_demo.py  test_scale.py
examples/substrate/: README.md  substrate_demo.py  test_substrate_demo.py
examples/xml_moieties/: README.md  covalent_cycle.sbml  discover_moieties.py  test_moieties.py
numeric_rule_finder/: __init__.py  analyst.py  cli.py  cohomology.py  datasets.py  euclidean.py  generic_linalg.py  homology.py  integer_invariants.py  invariants.py  petra_adapter.py  snf.py  substrate.py
tests/: test_analyst.py  test_cohomology.py  test_depth.py  test_invariants.py  test_substrate.py
